<resources>
    <string name="app_name">Thoughtful</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="relationship">Relationship</string>
    <string name="title_gift_search">Gift Search</string>
    <string name="title_chose_contact">Chose Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
</resources>